# iswitch

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: main.rs
