[package]
name = "iswitch"
version = "0.1.0"
edition = "2021"

[dependencies]
block = "0.1.6"
cocoa = "0.24"
core-foundation = "0.9"
notify = "6.1.1"
objc = "0.2.7"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
log = "0.4"
fern = "0.6"
chrono = "0.4"
lazy_static = "1.5.0"
